2010-04-22  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-handle-copy-file): Add new optional
	parameter `preserve-selinux-context'.
	(tramp-file-name-for-operation): Add `set-file-selinux-context'.

	* net/tramp.el (tramp-completion-handle-file-name-all-completions):
	Ensure, that non remote files are still checked.  Oops.

2010-04-21  Michael Albinus  <michael.albinus@gmx.de>

	Fix Bug#5840.

	* icomplete.el (icomplete-completions): Use `non-essential'.

	* net/tramp.el (tramp-connectable-p): New defun.
	(tramp-handle-expand-file-name)
	(tramp-completion-handle-file-name-all-completions)
	(tramp-completion-handle-file-name-completion): Use it.

2010-04-21  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/lisp.el (lisp-completion-at-point): Try and handle errors.

2010-04-21  Jan Djärv  <jan.h.d@swipnet.se>

	* vc-dir.el (vc-dir-tool-bar-map): Add :label on some tool bar items.

	* tool-bar.el (tool-bar-setup): Add :label on some tool bar items.

	* loadup.el: Load dynamic-setting.el if feature dynamic-setting
	is present.

	* info.el (info-tool-bar-map): Add labels.

	* cus-start.el (all): Add tool-bar-style and tool-bar-max-label-size.

	* cus-edit.el (custom-commands): Add labels for tool bar.
	(custom-buffer-create-internal, Custom-mode): Adjust for
	labels in custom-commands.

	* dynamic-setting.el: Renamed from font-setting.el.

2010-04-21  John Wiegley  <jwiegley@gmail.com>

	* ido.el (ido-init-completion-maps): For ido-switch-buffer, C-o
	toggles the use of virtual buffers.
	(ido-buffer-internal): Guard `ido-use-virtual-buffers' global
	value.
	(ido-toggle-virtual-buffers): New function.

2010-04-21  Juanma Barranquero  <lekktu@gmail.com>

	Use `define-derived-mode'; fix window selection; doc fixes.
	* play/tetris.el (tetris, tetris-update-speed-function)
	(tetris-tty-colors, tetris-x-colors, tetris-move-bottom)
	(tetris-move-left, tetris-move-right, tetris-rotate-prev)
	(tetris-rotate-next, tetris-end-game, tetris-start-game)